commit all progress

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -13,3 +13,8 @@ $pteal: #14B2CC;
 $pgray: #BCF5FF;
 $pred: #FF4240;
 $ppurple: #CC1469;
+$pdarkpurple: #961945;
+$ppink: #FF4485;
+$pblack: #0F0E04;
+$pblue: #2BD4FF;
+$pdarkteal: #1E7287;
