--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,46 +1,96 @@
 @import '~bootstrap/scss/bootstrap';
+@import 'colors';
 
+a {
+  color: black;
+  text-decoration: none;
 
-body {
-  margin:0;
-  padding:0;
-  background-color:black;
-  color: white;
 }
-div {
-  margin:0;
-  padding:0;
+a:hover {
+  text-decoration: none;
+  color: deeppink;
 }
-h2 {
-  padding-left:2rem;
-  padding-top:2rem;
+//
+// embed{
+//   min-width:80%;
+//   min-height: 1150px;
+//   position:absolute;
+//   height:auto;
+//   overflow:hidden;
+//   padding:0;
+//   margin: 2rem auto;
+// }
+
+h1 {
+  font-weight:bold;
+  font-size: 6rem;
+  @media (min-width: 765px) {
+    font-size: 9rem;
+  }
 }
-.topper {
-  margin:0;
-  padding:0;
-  text-shadow:black -2px 2px;
+
+html {
+  font-family: 'Poppins', sans-serif;
+}
+header {
+margin-top:6rem;
+text-align:center;
+}
+
+svg {
+  max-height:100px;
+  padding: 1rem;
+  margin: .5rem;
+}
+.contact {
+  justify-content: space-around;
   color:white;
-}
-.bio {
-  background-color: #FF4240;
-  padding-right:2rem;
-}
-.projects {
-  background-color: #00FF96;
-}
-.fine-art {
-  background-color: #14B2CC;
-}
-.resume {
-  background-color:#BCF5FF;
-}
-.skills {
-  padding-left:2rem;
-  padding-top:2rem;
+  background-color:black;
+  align-items: center;
+  padding:.25rem;
 }
 
-/* $pgreen: #00FF96;
-$pteal: #14B2CC;
-$pgray: #BCF5FF;
-$pred: #FF4240;
-$ppurple: #CC1469; */
+.subhead{
+flex-direction:column;
+align-items:center;
+  @media (min-width: 600px) {
+    flex-direction: row;
+    justify-content: space-around;
+    padding-bottom:6rem;
+  }
+}
+
+.navbar {
+  margin:0 auto;
+  padding-top: 5rem;
+  flex-direction: column;
+  @media (min-width: 705px) {
+    flex-direction: row;
+    max-width:950px;
+  }
+  @media (max-width:500px){
+    padding-bottom:2rem;
+  }
+}
+
+.square {
+  text-align: center;
+  align-items: center;
+  padding: .5rem 1rem;
+}
+
+.skill {
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  min-width: 140px;
+  min-height: 140px;
+  text-align: center;
+}
+
+.skills {
+  color:white;
+  background-color:black;
+  font-weight: bold;
+  margin:0 auto;
+}
