--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -86,6 +86,7 @@ align-items:center;
   min-width: 140px;
   min-height: 140px;
   text-align: center;
+
 }
 
 .skills {
@@ -93,4 +94,5 @@ align-items:center;
   background-color:black;
   font-weight: bold;
   margin:0 auto;
+  padding-bottom:3rem;
 }
