--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,75 +4,110 @@
 a {
   color: black;
   text-decoration: none;
-
 }
+
+body {
+  min-height:100vh;
+}
+
 a:hover {
   text-decoration: none;
   color: deeppink;
 }
-//
-// embed{
-//   min-width:80%;
-//   min-height: 1150px;
-//   position:absolute;
-//   height:auto;
-//   overflow:hidden;
-//   padding:0;
-//   margin: 2rem auto;
-// }
 
 h1 {
-  font-weight:bold;
+  font-weight: bold;
   font-size: 6rem;
   @media (min-width: 765px) {
     font-size: 9rem;
   }
 }
+embed {
+width: 80%;
+min-height: 1150px;
+  overflow:hidden;
+  padding:0;
+  margin: 1rem auto;
+}
 
 html {
   font-family: 'Poppins', sans-serif;
 }
+
 header {
-margin-top:6rem;
-text-align:center;
+  margin-top: 6rem;
+  text-align: center;
 }
 
 svg {
-  max-height:100px;
+  max-height: 100px;
   padding: 1rem;
-  margin: .5rem;
+  margin: 0.5rem;
+}
+.about-me {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:black;
+  color:white;
+}
+
+.about-me-box {
+  font-size:1.25rem;
+  font-weight: 350;
+  padding: 1rem;
+  max-width: 80%;
+  @media(min-width:705) {
+    max-width: 55%;
+  }
 }
 .contact {
   justify-content: space-around;
-  color:white;
-  background-color:black;
+  color: white;
+  background-color: black;
   align-items: center;
-  padding:.25rem;
+  padding: 0.25rem;
 }
 
-.subhead{
-flex-direction:column;
-align-items:center;
-  @media (min-width: 600px) {
-    flex-direction: row;
-    justify-content: space-around;
-    padding-bottom:6rem;
-  }
+.footer {
+  border-top: 1px solid white;
 }
+
 
 .navbar {
-  margin:0 auto;
+  margin: 0 auto;
   padding-top: 5rem;
   flex-direction: column;
   @media (min-width: 705px) {
     flex-direction: row;
-    max-width:950px;
+    max-width: 950px;
   }
-  @media (max-width:500px){
-    padding-bottom:2rem;
+  @media (max-width:500px) {
+    padding-bottom: 2rem;
   }
 }
 
+.subhead {
+  flex-direction: column;
+  align-items: center;
+  @media (min-width: 600px) {
+    flex-direction: row;
+    justify-content: space-around;
+    padding-bottom: 6rem;
+  }
+}
+
+
+.resume{
+  display: flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items: center;
+  background-color:black;
+}
+.resume a {
+  color:white;
+}
 .square {
   text-align: center;
   align-items: center;
@@ -80,19 +115,18 @@ align-items:center;
 }
 
 .skill {
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   min-width: 140px;
   min-height: 140px;
   text-align: center;
-
 }
 
 .skills {
-  color:white;
-  background-color:black;
+  color: white;
+  background-color: black;
   font-weight: bold;
-  margin:0 auto;
-  padding-bottom:3rem;
+  margin: 0 auto;
+  padding-bottom: 3rem;
 }
