--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,6 +10,10 @@ body {
   min-height:100vh;
 }
 
+.black-bg {
+  background-color: #000;
+}
+
 a:hover {
   text-decoration: none;
   color: deeppink;
@@ -35,12 +39,13 @@ html {
 }
 
 header {
-  margin-top: 6rem;
+  padding-top: 6rem;
   text-align: center;
 }
 
 svg {
   max-height: 100px;
+  min-height: 100px;
   padding: 1rem;
   margin: 0.5rem;
 }
@@ -129,4 +134,8 @@ svg {
   font-weight: bold;
   margin: 0 auto;
   padding-bottom: 3rem;
+}
+
+.top-content {
+  background-color:white;
 }
