--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,10 +10,6 @@ body {
   min-height:100vh;
 }
 
-.black-bg {
-  background-color: #000;
-}
-
 a:hover {
   text-decoration: none;
   color: deeppink;
@@ -43,18 +39,28 @@ header {
   text-align: center;
 }
 
+section {
+  font-family: Raleway, sans-serif;
+  font-weight: 300;
+}
+
 svg {
   max-height: 100px;
   min-height: 100px;
   padding: 1rem;
   margin: 0.5rem;
 }
+
 .about-me {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color:black;
   color:white;
+  @media(min-width: 705) {
+    max-width: 80%;
+    text-align: justify;
+  }
 }
 
 .about-me-box {
@@ -66,6 +72,12 @@ svg {
     max-width: 55%;
   }
 }
+
+
+.black-bg {
+  background-color: #000;
+}
+
 .contact {
   justify-content: space-around;
   color: white;
@@ -77,7 +89,25 @@ svg {
 .footer {
   border-top: 1px solid white;
 }
+.carousel {
+  display: flex;
+  justify-content:center;
+  align-items:center;
+}
 
+.carousel-inner {
+  margin: 2rem;
+  margin-bottom: 3rem;
+@media (min-width: 500px) {
+  max-width: 80%;
+  max-height: 80vh;
+}
+}
+
+.carousel-image {
+object-fit: scale-down !important;
+object-position: center;
+}
 
 .navbar {
   margin: 0 auto;
@@ -102,6 +132,10 @@ svg {
   }
 }
 
+.carousel-item {
+  text-align: center;
+  color:white;
+}
 
 .resume{
   display: flex;
@@ -120,6 +154,7 @@ svg {
 }
 
 .skill {
+  flex: 1 0 15%;
   display: flex;
   flex-direction: column;
   justify-content: center;
