--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,10 +7,10 @@ a {
 }
 
 body {
-  min-height:100vh;
+  min-height: 100vh;
 }
 
-a:hover {
+a :hover {
   text-decoration: none;
   color: deeppink;
 }
@@ -22,16 +22,18 @@ h1 {
     font-size: 9rem;
   }
 }
-embed {
-width: 80%;
-min-height: 1150px;
-  overflow:hidden;
-  padding:0;
-  margin: 1rem auto;
+
+h3 {
+  margin: 0.5rem auto;
+  font-familY: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-html {
-  font-family: 'Poppins', sans-serif;
+embed {
+  width: 80%;
+  min-height: 1150px;
+  overflow: hidden;
+  padding: 0;
+  margin: 1rem auto;
 }
 
 header {
@@ -47,32 +49,36 @@ section {
 svg {
   max-height: 100px;
   min-height: 100px;
+  max-width: 100px;
   padding: 1rem;
-  margin: 0.5rem;
+  margin: 0.5rem auto;
 }
 
 .about-me {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:black;
-  color:white;
+  background-color: black;
+  color: white;
   @media(min-width: 705) {
-    max-width: 80%;
+    max-width: 60%;
     text-align: justify;
   }
 }
 
 .about-me-box {
-  font-size:1.25rem;
+  font-size: 1.25rem;
   font-weight: 350;
   padding: 1rem;
   max-width: 80%;
-  @media(min-width:705) {
-    max-width: 55%;
+  @media(min-width: 705) {
+    max-width: 50%;
+    margin: 0 auto;
   }
 }
-
+// .orient-fix {
+//   transform: rotate(90deg);
+// }
 
 .black-bg {
   background-color: #000;
@@ -86,27 +92,57 @@ svg {
   padding: 0.25rem;
 }
 
+.art-backsplash {
+  background-image: url("public/donut.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.about-me-backsplash {
+  background-image: url("public/misc/self-portrait-1-crop.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.work-backsplash {
+  background-image: url("public/glitch-images/DSC_0416.jpg");
+  background-size: cover;
+  background-position: right;
+}
+
+.skills-backsplash {
+  background-image: url("public/skills-backsplash.jpg");
+  background-size: cover;
+  background-position: bottom;
+}
+
+.resume-backsplash {
+  background-image: url("public/resume-backsplash.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
 .footer {
   border-top: 1px solid white;
 }
+
 .carousel {
   display: flex;
-  justify-content:center;
-  align-items:center;
+  justify-content: center;
+  align-items: right;
 }
 
 .carousel-inner {
-  margin: 2rem;
-  margin-bottom: 3rem;
-@media (min-width: 500px) {
-  max-width: 80%;
-  max-height: 80vh;
-}
+  margin: 2rem auto 3rem;
+  @media (min-width: 500px) {
+    max-width: 80%;
+  }
 }
 
 .carousel-image {
-object-fit: scale-down !important;
-object-position: center;
+  object-fit: scale-down;
+  max-height: 80vh;
+  margin: 0 auto;
 }
 
 .navbar {
@@ -132,25 +168,36 @@ object-position: center;
   }
 }
 
-.carousel-item {
-  text-align: center;
-  color:white;
+.clearBG {
+  background-color: rgba(0, 0, 0, 0);
 }
 
-.resume{
+.carousel-item {
+  text-align: center;
+  color: white;
+}
+
+.resume {
   display: flex;
-  flex-direction:column;
-  justify-content:center;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  background-color:black;
+  background-color: black;
 }
+
 .resume a {
-  color:white;
+  color: white;
 }
+
+.nav-link:hover {
+  text-decoration: none;
+  color: deeppink;
+}
+
 .square {
   text-align: center;
   align-items: center;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 
 .skill {
@@ -171,6 +218,10 @@ object-position: center;
   padding-bottom: 3rem;
 }
 
+.whiteText {
+  color: white;
+}
+
 .top-content {
-  background-color:white;
+  background-color: white;
 }
