minor capitalization fix

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -93,31 +93,31 @@ svg {
 }
 
 .art-backsplash {
-  background-image: url("public/donut.jpg");
+  background-image: url('public/donut.jpg');
   background-size: cover;
   background-position: center;
 }
 
 .about-me-backsplash {
-  background-image: url("public/misc/self-portrait-1-crop.jpg");
+  background-image: url('public/misc/self-portrait-1-crop.jpg');
   background-size: cover;
   background-position: center;
 }
 
 .work-backsplash {
-  background-image: url("public/glitch-images/DSC_0416.jpg");
+  background-image: url('public/glitch-images/DSC_0416.jpg');
   background-size: cover;
   background-position: right;
 }
 
 .skills-backsplash {
-  background-image: url("public/skills-backsplash.jpg");
+  background-image: url('public/skills-backsplash.jpg');
   background-size: cover;
   background-position: bottom;
 }
 
 .resume-backsplash {
-  background-image: url("public/resume-backsplash.jpg");
+  background-image: url('public/resume-backsplash.jpg');
   background-size: cover;
   background-position: center;
 }
