--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -93,7 +93,7 @@ svg {
 }
 
 .art-backsplash {
-  background-image: url('public/donut.jpg');
+  background-image: url('public/art-backsplash.jpg');
   background-size: cover;
   background-position: center;
 }
