fix a bug where contact info doesn't show

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -28,12 +28,18 @@ h3 {
   font-familY: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-embed {
-  width: 80%;
-  min-height: 1150px;
-  overflow: hidden;
-  padding: 0;
-  margin: 1rem auto;
+.flexible-object {
+  position: absolute;
+  // top: 0;
+  // left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.flexible-container {
+  position: relative;
+  min-width: 80%;
+  padding-bottom: 100%;
 }
 
 header {
@@ -44,6 +50,7 @@ header {
 section {
   font-family: Raleway, sans-serif;
   font-weight: 300;
+  margin-bottom: 1rem;
 }
 
 svg {
@@ -84,6 +91,12 @@ svg {
   background-color: #000;
 }
 
+.flavor-text {
+  @media (min-width: 600px) {
+width: 245px;
+  }
+}
+
 .contact {
   justify-content: space-around;
   color: white;
@@ -93,31 +106,31 @@ svg {
 }
 
 .art-backsplash {
-  background-image: url('public/art-backsplash.jpg');
+  background-image: url("public/art-backsplash.jpg");
   background-size: cover;
   background-position: center;
 }
 
 .about-me-backsplash {
-  background-image: url('public/misc/self-portrait-1-crop.jpg');
+  background-image: url("public/misc/self-portrait-1-crop.jpg");
   background-size: cover;
   background-position: center;
 }
 
 .work-backsplash {
-  background-image: url('public/glitch-images/DSC_0416.jpg');
+  background-image: url("public/glitch-images/DSC_0416.jpg");
   background-size: cover;
   background-position: right;
 }
 
 .skills-backsplash {
-  background-image: url('public/skills-backsplash.jpg');
+  background-image: url("public/skills-backsplash.jpg");
   background-size: cover;
   background-position: bottom;
 }
 
 .resume-backsplash {
-  background-image: url('public/resume-backsplash.jpg');
+  background-image: url("public/resume-backsplash.jpg");
   background-size: cover;
   background-position: center;
 }
